
Package org.springframework.orm
* added "orm.hibernate3" support package for Hibernate3, mirroring the Hibernate 2.1 support in "orm.hibernate"
* removed deprecated "createQuery" and "createCriteria" methods from HibernateTemplate: use Session methods instead

Package org.springframework.samples
* migrated Petclinic's Hibernate layer from Hibernate 2.1 to Hibernate3

Package org.springframework.web
* changed MultiActionController's log level from INFO to DEBUG
* removed deprecated BindStatus class from "servlet.tags": use BindStatus from "servlet.support" (recompile old JSPs)
* included debug logging for session attributes being added and removed (AbstractFormController and AbstractWizardFormController)


Changes in version 1.1.5 (28.2.2005)
------------------------------------

Documentation
* moved Tapestry integration content to a separate chapter ("Integrating with other web frameworks")

Package org.springframework.aop
* adapted AdvisedSupport to keep the order of proxy interfaces, to create JDK proxy with specified order of interfaces
* introduced private monitor within ConcurrencyThrottleInterceptor, to avoid synchronizing on the user-visible instance

Package org.springframework.beans
* ClassEditor trims class name strings and converts empty strings into null values
* CustomBooleanEditor accepts "1" (true) and "0" (false) values too
* CustomBooleanEditor only accepts default "true/"on"/"yes"/"1" and "false"/"off"/"no"/"0" if not given explicit Strings
* added overloaded StringTrimmerEditor constructor that takes a set of chars to delete (e.g. for unwanted line breaks)
* added "getBeanNamesForType" method to ListableBeanFactory interface, also checking FactoryBeans and manual singletons
* added "beanNamesForTypeIncludingAncestors" method to BeanFactoryUtils, corresponding to "getBeanNamesForType"
* renamed FactoryBeanCircularReferenceException to FactoryBeanNotInitializedException, reflecting general causes