@@ -1,0 +1,46 @@
+/*
+ * Copyright 2002-2004 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.springframework.validation;
+
+import org.springframework.validation.support.AbstractBindingErrorProcessorSupport;
+
+/**
+ * Default <code>RequiredFieldErrorProcessor</code>, using the 'required' code and the field name to
+ * resolve a message code from the BindException.
+ * 
+ * @see BindException#resolveMessageCodes(String, String)
+ * @see #getArgumentsForBindingError(String, String)
+ * @see DefaultPropertyAccessExceptionProcessor
+ * @author Alef Arendsen
+ */
+public class DefaultRequiredFieldErrorProcessor extends AbstractBindingErrorProcessorSupport implements RequiredFieldErrorProcessor {
+
+    /**
+	 * Error code that a missing field error (i.e. a required field not
+	 * found in the list of property values) will be registered with:
+	 * "required".
+	 */
+	public static final String MISSING_FIELD_ERROR_CODE = "required";
+
+    public void processRequiredFieldError(String field, BindException errors) {
+        errors.addError(
+                new FieldError(errors.getObjectName(), field, "", true,
+                errors.resolveMessageCodes(MISSING_FIELD_ERROR_CODE, field),
+                getArgumentsForBindingError(errors.getObjectName(), field), "Field '" + field + "' is required"));
+
+
+    }
+}
